# setka

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  config.yaml  pyproject.toml  render.yaml
Obsidian Setka/.obsidian/: app.json  core-plugins.json
Obsidian Setka/.obsidian/snippets/: setka-style.css
Obsidian Setka/00 Главная/: Старт.md
Obsidian Setka/01 Каналы/: Антискролл.md  Деньги в телефоне.md  Штаб решений.md
Obsidian Setka/02 Посты/Антискролл/: 2026-07-01 - 40 минут без автоскролла.md  2026-07-01 - Лента не отдых.md  2026-07-01 - Телефон рядом уже крадет фокус.md
Obsidian Setka/02 Посты/Деньги в телефоне/: 2026-07-01 - Не ищи схему ищи услугу.md  2026-07-01 - Подписки съедают деньги тихо.md  2026-07-01 - Скрипт первого сообщения клиенту.md
Obsidian Setka/03 Идеи/: Банк идей.md
Obsidian Setka/05 Серии/: 7 дней без автоскролла.md  Карта серий.md  Минус лишние подписки.md  Нейросети как подработка.md  Первые 10000 без сказок.md  Телефон не хозяин.md  Фокус за 25 минут.md
Obsidian Setka/06 План/: Каталог мини-продуктов.md  План развития каналов.md  Расписание постов - стартовая неделя.md
Obsidian Setka/07 Мини-продукты/: Индекс мини-продуктов.md
Obsidian Setka/99 Шаблоны/: Шаблон визуала.md  Шаблон поста.md  Шаблон серии.md
scripts/: install-windows-autostart.ps1  start-bot.ps1  stop-bot.ps1  uninstall-windows-autostart.ps1
src/tg_grid_agent/: __init__.py  admin_bot.py  bot_client.py  cli.py  content_agent.py  db.py  post_improver.py  scheduler.py  settings.py  telegram_client.py  youtube_source.py
(+10 files in other folders)
