[project]
name = "tg-grid-agent"
version = "0.1.0"
description = "Agent for planning, generating, and scheduling content across a Telegram channel grid."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "telethon>=1.35.0",
]

[project.scripts]
tg-grid = "tg_grid_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
